Fix panel too small

--- a/UI/src/components/toolButton/toolButton.module.scss
+++ b/UI/src/components/toolButton/toolButton.module.scss
@@ -18,7 +18,7 @@
 
 .panel {
     position: absolute;
-    width: 300rem;
+    width: 400rem;
     top: 110%;
 }
 
